[package]
name = "questdb-retention"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
futures = "0.3.25"
postgres = "0.19.4"
prompts = "0.1.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
